Added new patch for reset issue in we mega menu

--- a/composer.json
+++ b/composer.json
@@ -391,7 +391,9 @@
                 "D10 compatibility": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-drupal-10.patch",
                 "D10 deprecations fix": "https://www.drupal.org/files/issues/2023-03-16/we_megamenu-fix-php8-deprecations.patch",
                 "https://www.drupal.org/project/we_megamenu/issues/3226361": "https://www.drupal.org/files/issues/2022-05-30/3226361_10.patch",
-                "Menu blocks label issue": "https://www.drupal.org/files/issues/2023-05-06/we_megamenu-block_label_incorrectly_defined-3357546.patch"
+                "Menu blocks label issue": "https://www.drupal.org/files/issues/2023-05-06/we_megamenu-block_label_incorrectly_defined-3357546.patch",
+                "Front menu block render": "https://www.drupal.org/files/issues/2023-03-21/14977164.patch",
+                "Reset issue": "patches/we_megamenu_reset.patch"
             },
             "drupal/fixed_block_content": {
                 "Access Issue for anonymous users": "https://www.drupal.org/files/issues/2022-11-11/3272253-fixed_blocks_not_visible_to_guest_users-5.patch"
