block class patch

--- a/composer.json
+++ b/composer.json
@@ -425,6 +425,9 @@
             },
             "drupal/search_api_solr": {
                 "SolrCommands construct": "https://www.drupal.org/files/issues/2022-12-07/search_api_solr-arguments_error-3325880-2.patch"
+            },
+            "drupal/block_class": {
+                "Issue Place any block to any region": "patches/block_class.patch"
             }
 
 
