APEX-655: UAT Feedback fix

--- a/config/apex-tools/default/block.block.languageswitchercontent_2.yml
+++ b/config/apex-tools/default/block.block.languageswitchercontent_2.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - language
+    - system
   theme:
     - apex_tools
 id: languageswitchercontent_2
@@ -17,4 +18,8 @@ settings:
   label: 'Language switcher (Content)'
   label_display: visible
   provider: language
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    negate: true
+    pages: /tools/custom-solutions
