--- a/config/apex-tools/default/config_ignore.settings.yml
+++ b/config/apex-tools/default/config_ignore.settings.yml
@@ -6,3 +6,4 @@ ignored_config_entities:
   - apex_migrations.settings
   - atg_callout.settings
   - apex_tools_custom_quotation.csqw_settings
+  - block.block.customlanguageswitcher
