add bartik and migrate csv | added swiftmailer in custom | Delete update dependency on sympony mailer

--- a/composer.json
+++ b/composer.json
@@ -127,6 +127,7 @@
         "drupal/link_class": "^2.1",
         "drupal/linkit": "^6.0@beta",
         "drupal/login_emailusername": "^2.1",
+        "drupal/mailsystem": "^4.4",
         "drupal/markup": "^2.0@beta",
         "drupal/media_entity_browser": "^2.0@alpha",
         "drupal/media_responsive_thumbnail": "^1.4",
