--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -160,6 +160,7 @@ module:
   webform_node: 0
   webform_ui: 0
   workflows: 0
+  migrate_source_csv: 0
   menu_link_content: 1
   pathauto: 1
   content_translation: 10
@@ -171,4 +172,5 @@ theme:
   seven: 0
   atg: 0
   cleco: 0
+  bartik: 0
 profile: standard
