--- a/config/crescenttool/default/core.extension.yml
+++ b/config/crescenttool/default/core.extension.yml
@@ -156,12 +156,14 @@ module:
   webform_attachment: 0
   webform_submission_export_import: 0
   webform_ui: 0
+  migrate_source_csv: 0
   limited_field_widgets: 1
   pathauto: 1
   views: 10
   paragraphs: 11
   blackbird: 1000
 theme:
+  bartik: 0
   seven: 0
   stable: 0
   classy: 0
