--- a/config/apex-tools/local/core.extension.yml
+++ b/config/apex-tools/local/core.extension.yml
@@ -167,6 +167,7 @@ module:
   webform_node: 0
   webform_ui: 0
   workflows: 0
+  migrate_source_csv: 0
   menu_link_content: 1
   pathauto: 1
   content_translation: 10
@@ -178,6 +179,7 @@ module:
   apex_tools_custom_quotation: 87
   standard: 1000
 theme:
+  bartik: 0
   seven: 0
   atg: 0
   apex_tools: 0
