--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -149,6 +149,7 @@ module:
   viewsreference: 0
   webform: 0
   webform_ui: 0
+  migrate_source_csv: 0
   limited_field_widgets: 1
   pathauto: 1
   password_policy: 10
@@ -156,6 +157,7 @@ module:
   paragraphs: 11
   blackbird: 1000
 theme:
+  bartik: 0
   seven: 0
   stable: 0
   classy: 0
