--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -150,6 +150,7 @@ module:
   webform: 0
   webform_ui: 0
   limited_field_widgets: 1
+  migrate_source_csv: 0
   pathauto: 1
   views: 10
   paragraphs: 11
@@ -159,4 +160,5 @@ theme:
   stable: 0
   classy: 0
   campbell: 0
+  bartik: 0
 profile: blackbird
