--- a/config/clecotools/local/core.extension.yml
+++ b/config/clecotools/local/core.extension.yml
@@ -162,6 +162,7 @@ module:
   webform_node: 0
   webform_ui: 0
   workflows: 0
+  migrate_source_csv: 0
   menu_link_content: 1
   pathauto: 1
   content_translation: 10
@@ -170,6 +171,7 @@ module:
   paragraphs: 11
   standard: 1000
 theme:
+  bartik: 0
   seven: 0
   atg: 0
   cleco: 0
