--- a/config/crescenttool_au/default/core.extension.yml
+++ b/config/crescenttool_au/default/core.extension.yml
@@ -158,6 +158,7 @@ module:
   webform_mailchimp: 0
   webform_submission_export_import: 0
   webform_ui: 0
+  migrate_source_csv: 0
   limited_field_widgets: 1
   pathauto: 1
   selective_better_exposed_filters: 1
@@ -165,6 +166,7 @@ module:
   paragraphs: 11
   blackbird: 1000
 theme:
+  bartik: 0
   seven: 0
   stable: 0
   classy: 0
