--- a/config/sata_us/default/core.extension.yml
+++ b/config/sata_us/default/core.extension.yml
@@ -161,6 +161,7 @@ module:
   webform_mailchimp: 0
   webform_submission_export_import: 0
   webform_ui: 0
+  migrate_source_csv: 0
   limited_field_widgets: 1
   pathauto: 1
   selective_better_exposed_filters: 1
