APEX-792: Updating language config

--- a/config/apex-tools/default/block.block.languageswitchercontent_2.yml
+++ b/config/apex-tools/default/block.block.languageswitchercontent_2.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   module:
     - language
-    - system
   theme:
     - apex_tools
 id: languageswitchercontent_2
@@ -18,8 +17,4 @@ settings:
   label: 'Language switcher (Content)'
   label_display: visible
   provider: language
-visibility:
-  request_path:
-    id: request_path
-    negate: true
-    pages: ''
+visibility: {  }
