APEX-792: Bug fixes

--- a/config/apex-tools/default/field.field.paragraph.screwdriver_cover_features.field_free_spinning.yml
+++ b/config/apex-tools/default/field.field.paragraph.screwdriver_cover_features.field_free_spinning.yml
@@ -9,7 +9,7 @@ id: paragraph.screwdriver_cover_features.field_free_spinning
 field_name: field_free_spinning
 entity_type: paragraph
 bundle: screwdriver_cover_features
-label: 'Free Spinning'
+label: 'Free Spinning (able to spin independently of part being covered)'
 description: ''
 required: false
 translatable: false
