--- a/config/apex-tools/default/field.field.paragraph.screwdriver_cover_features.field_screw_press_fit.yml
+++ b/config/apex-tools/default/field.field.paragraph.screwdriver_cover_features.field_screw_press_fit.yml
@@ -9,7 +9,7 @@ id: paragraph.screwdriver_cover_features.field_screw_press_fit
 field_name: field_screw_press_fit
 entity_type: paragraph
 bundle: screwdriver_cover_features
-label: 'Press Fit'
+label: 'Press Fit (static)'
 description: ''
 required: false
 translatable: false
