--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -150,6 +150,7 @@ module:
   webform: 0
   webform_ui: 0
   migrate_source_csv: 0
+  phpass: 0
   limited_field_widgets: 1
   pathauto: 1
   password_policy: 10
