--- a/config/campbell/default/core.extension.yml
+++ b/config/campbell/default/core.extension.yml
@@ -149,6 +149,7 @@ module:
   we_megamenu: 0
   webform: 0
   webform_ui: 0
+  phpass: 0
   limited_field_widgets: 1
   migrate_source_csv: 0
   pathauto: 1
