--- a/config/clecotools/default/core.extension.yml
+++ b/config/clecotools/default/core.extension.yml
@@ -161,6 +161,7 @@ module:
   webform_ui: 0
   workflows: 0
   migrate_source_csv: 0
+  phpass: 0
   menu_link_content: 1
   pathauto: 1
   content_translation: 10
