--- a/config/crescenttool/default/core.extension.yml
+++ b/config/crescenttool/default/core.extension.yml
@@ -157,6 +157,7 @@ module:
   webform_submission_export_import: 0
   webform_ui: 0
   migrate_source_csv: 0
+  phpass: 0
   limited_field_widgets: 1
   pathauto: 1
   views: 10
