--- a/config/gearwrench/default/core.extension.yml
+++ b/config/gearwrench/default/core.extension.yml
@@ -158,6 +158,7 @@ module:
   webform_submission_export_import: 0
   webform_ui: 0
   migrate_source_csv: 0
+  phpass: 0
   limited_field_widgets: 1
   pathauto: 1
   selective_better_exposed_filters: 1
