APEX-704: Seperated modules for commerce

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 /docroot/libraries/
 /docroot/README.md
 
+# Ignore commerce modules
+/docroot/sites/ecom/modules/contrib/
+
 # Ignore sensitive and environment-specific information
 /docroot/sites/default/settings.php
 /docroot/sites/*/settings.ddev.php
