--- a/config/ecom/default/user.role.authenticated.yml
+++ b/config/ecom/default/user.role.authenticated.yml
@@ -5,6 +5,11 @@ dependencies:
   config:
     - filter.format.limited_html
   module:
+    - commerce_checkout
+    - commerce_order
+    - commerce_payment
+    - commerce_product
+    - commerce_wishlist
     - filter
     - media
     - search
@@ -17,8 +22,13 @@ label: 'Authenticated user'
 weight: 1
 is_admin: false
 permissions:
+  - 'access checkout'
   - 'access content'
   - 'access shortcuts'
+  - 'access wishlist'
+  - 'manage own commerce_payment_method'
   - 'search content'
   - 'use text format limited_html'
+  - 'view commerce_product'
   - 'view media'
+  - 'view own commerce_order'
