--- a/config/ecom/default/core.entity_view_display.user.user.default.yml
+++ b/config/ecom/default/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.user.user.commerce_remote_id
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -32,5 +33,7 @@ content:
     weight: 0
     region: content
 hidden:
+  commerce_remote_id: true
+  customer_profiles: true
   langcode: true
   search_api_excerpt: true
