--- a/config/ecom/default/core.extension.yml
+++ b/config/ecom/default/core.extension.yml
@@ -28,6 +28,29 @@ module:
   classy_paragraphs: 0
   color: 0
   color_field: 0
+  commerce: 0
+  commerce_add_to_cart_link: 0
+  commerce_authnet: 0
+  commerce_cart: 0
+  commerce_checkout: 0
+  commerce_log: 0
+  commerce_number_pattern: 0
+  commerce_order: 0
+  commerce_order_label: 0
+  commerce_order_update: 0
+  commerce_payment: 0
+  commerce_price: 0
+  commerce_product: 0
+  commerce_product_limits: 0
+  commerce_product_tax: 0
+  commerce_quantity_increments: 0
+  commerce_shipping: 0
+  commerce_shipping_same_as_billing: 0
+  commerce_stock: 0
+  commerce_store: 0
+  commerce_tax: 0
+  commerce_view_receipt: 0
+  commerce_wishlist: 0
   config: 0
   config_export_ignore: 0
   config_filter: 0
@@ -43,6 +66,7 @@ module:
   easy_breadcrumb: 0
   editor: 0
   editor_file: 0
+  entity: 0
   entity_browser: 0
   entity_reference_revisions: 0
   environment_indicator: 0
@@ -68,6 +92,7 @@ module:
   image: 0
   imageapi_optimize: 0
   imageapi_optimize_resmushit: 0
+  inline_entity_form: 0
   inline_form_errors: 0
   jquery_ui: 0
   jquery_ui_autocomplete: 0
@@ -107,6 +132,8 @@ module:
   path_alias: 0
   path_redirect_import: 0
   permissions_filter: 0
+  physical: 0
+  profile: 0
   purge: 0
   purge_queuer_coretags: 0
   rdf: 0
@@ -123,6 +150,7 @@ module:
   shortcut: 0
   simple_sitemap: 0
   smart_trim: 0
+  state_machine: 0
   symfony_mailer: 0
   symfony_mailer_bc: 0
   syslog: 0
@@ -139,6 +167,7 @@ module:
   user: 0
   video_embed_field: 0
   video_embed_media: 0
+  views_bulk_operations: 0
   views_taxonomy_term_name_into_id: 0
   views_tree: 0
   viewsreference: 0
