--- a/config/ecom/default/user.role.anonymous.yml
+++ b/config/ecom/default/user.role.anonymous.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - filter.format.restricted_html
   module:
+    - commerce_checkout
+    - commerce_product
+    - commerce_wishlist
     - filter
     - media
     - search
@@ -16,7 +19,10 @@ label: 'Anonymous user'
 weight: 0
 is_admin: false
 permissions:
+  - 'access checkout'
   - 'access content'
+  - 'access wishlist'
   - 'search content'
   - 'use text format restricted_html'
+  - 'view commerce_product'
   - 'view media'
