--- a/config/apex-tools/default/views.view.distributor_local_rep.yml
+++ b/config/apex-tools/default/views.view.distributor_local_rep.yml
@@ -1464,7 +1464,7 @@ display:
           exclude: false
           alter:
             alter_text: true
-            text: '<a href="/request-a-quote?distributor_id=undefined" target="_blank" class="button button--small button--simple button--secondary button--outline">Request Quote</a>'
+            text: '<a href="/contact#request_a_quote" target="_blank" class="button button--small button--simple button--secondary button--outline">Request Quote</a>'
             make_link: false
             path: ''
             absolute: false
