--- a/config/apex-tools/default/core.entity_view_display.node.hubspot_form.default.yml
+++ b/config/apex-tools/default/core.entity_view_display.node.hubspot_form.default.yml
@@ -7,72 +7,29 @@ dependencies:
     - field.field.node.hubspot_form.field_form_link
     - field.field.node.hubspot_form.field_hubspot_code
     - field.field.node.hubspot_form.field_hubspot_form
+    - field.field.node.hubspot_form.field_hubspot_form_id
     - field.field.node.hubspot_form.field_image
     - field.field.node.hubspot_form.field_not_a_hubspot_form
     - node.type.hubspot_form
   module:
-    - link
-    - text
     - user
 id: node.hubspot_form.default
 targetEntityType: node
 bundle: hubspot_form
 mode: default
-content:
-  field_form_link:
-    type: link
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    weight: 4
-    region: content
-  field_hubspot_code:
-    type: text_default
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    weight: 1
-    region: content
-  field_hubspot_form:
-    type: boolean
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    weight: 6
-    region: content
-  field_image:
-    type: entity_reference_label
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    weight: 2
-    region: content
-  field_not_a_hubspot_form:
-    type: boolean
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    weight: 5
-    region: content
-  links:
-    settings: {  }
-    third_party_settings: {  }
-    weight: 0
-    region: content
+content: {  }
 hidden:
   body: true
+  entity_print_view_epub: true
+  entity_print_view_pdf: true
+  entity_print_view_word_docx: true
+  field_form_link: true
+  field_hubspot_code: true
+  field_hubspot_form: true
+  field_hubspot_form_id: true
+  field_image: true
+  field_not_a_hubspot_form: true
   langcode: true
+  links: true
   search_api_excerpt: true
   uuid: true
