--- a/config/apex-tools/default/views.view.hubspot_forms.yml
+++ b/config/apex-tools/default/views.view.hubspot_forms.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.storage.node.field_form_link
     - field.storage.node.field_hubspot_code
+    - field.storage.node.field_hubspot_form_id
     - field.storage.node.field_image
     - field.storage.node.field_not_a_hubspot_form
     - node.type.hubspot_form
@@ -561,6 +562,69 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_hubspot_form_id:
+          id: field_hubspot_form_id
+          table: node__field_hubspot_form_id
+          field: field_hubspot_form_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: none
         options:
@@ -599,6 +663,7 @@ display:
       tags:
         - 'config:atg_translation.settings'
         - 'config:field.storage.node.field_hubspot_code'
+        - 'config:field.storage.node.field_hubspot_form_id'
         - 'config:field.storage.node.field_not_a_hubspot_form'
   hubspot_title_icon:
     id: hubspot_title_icon
@@ -931,6 +996,69 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        field_hubspot_form_id:
+          id: field_hubspot_form_id
+          table: node__field_hubspot_form_id
+          field: field_hubspot_form_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          plugin_id: field
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
       pager:
         type: none
         options:
@@ -969,5 +1097,6 @@ display:
       tags:
         - 'config:atg_translation.settings'
         - 'config:field.storage.node.field_form_link'
+        - 'config:field.storage.node.field_hubspot_form_id'
         - 'config:field.storage.node.field_image'
         - 'config:field.storage.node.field_not_a_hubspot_form'
