feature/APEX-691: added config for ckeditor5

--- a/config/apextoolgroup/default/core.extension.yml
+++ b/config/apextoolgroup/default/core.extension.yml
@@ -27,7 +27,7 @@ module:
   block_field: 0
   breakpoint: 0
   captcha: 0
-  ckeditor: 0
+  ckeditor5: 0
   classy_paragraphs: 0
   color: 0
   color_field: 0
@@ -113,6 +113,7 @@ module:
   path_alias: 0
   path_redirect_import: 0
   permissions_filter: 0
+  phpass: 0
   purge: 0
   purge_queuer_coretags: 0
   rdf: 0
@@ -154,7 +155,6 @@ module:
   viewsreference: 0
   webform: 0
   webform_ui: 0
-  phpass: 0
   limited_field_widgets: 1
   pathauto: 1
   password_policy: 10
