--- a/config/apextoolgroup/default/filter.format.full_html.yml
+++ b/config/apextoolgroup/default/filter.format.full_html.yml
@@ -42,7 +42,7 @@ filters:
     status: false
     weight: -10
     settings:
-      allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <s> <sup> <sub> <a href hreflang data-entity-substitution data-entity-type data-entity-uuid title> <img src alt data-entity-type data-entity-uuid data-align data-caption> <table> <caption> <tbody> <thead> <tfoot> <th> <td> <tr> <hr> <p> <h1> <pre> <u>'
+      allowed_html: ''
       filter_html_help: true
       filter_html_nofollow: false
   linkit:
@@ -66,3 +66,9 @@ filters:
         img: img
         iframe: iframe
       use_data_uri: '0'
+  filter_image_lazy_load:
+    id: filter_image_lazy_load
+    provider: filter
+    status: true
+    weight: 12
+    settings: {  }
