feature/APEX-692: D10-issue-fixes

--- a/composer.json
+++ b/composer.json
@@ -419,7 +419,7 @@
             },
             "drupal/sfweb2lead_webform": {
                 "D10 compatibility": "https://www.drupal.org/files/issues/2023-07-11/sfweb2lead_webform-drupal-10-compatibility-fix-3289580-14.patch",
-                "Event Dispatcher Issue": "patches/sf_webform_dispatch.patch"
+                "Event Subscriber Issue": "patches/sf_webform_dispatch.patch"
             },
             "drupal/path_redirect_import": {
                 "MigrateTools issue": "https://www.drupal.org/files/issues/2023-07-11/3313386_11.patch"
