--- a/config/crescenttool/default/pathauto.pattern.styleguide.yml
+++ b/config/crescenttool/default/pathauto.pattern.styleguide.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '/styleguide/[current-page:title]'
 selection_criteria:
   db286121-a0c3-4b9f-ab9f-ffffc4ec0d54:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: db286121-a0c3-4b9f-ab9f-ffffc4ec0d54
     context_mapping:
