--- a/config/crescenttool_au/default/pathauto.pattern.product_brand.yml
+++ b/config/crescenttool_au/default/pathauto.pattern.product_brand.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '/brands/[node:title]'
 selection_criteria:
   a8b9a8ca-0edb-4b09-acd8-785a7aac51b1:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: a8b9a8ca-0edb-4b09-acd8-785a7aac51b1
     context_mapping:
