--- a/config/gearwrench/default/pathauto.pattern.product_industry.yml
+++ b/config/gearwrench/default/pathauto.pattern.product_industry.yml
@@ -10,7 +10,7 @@ type: 'canonical_entities:node'
 pattern: '/all-tools/[node:title]'
 selection_criteria:
   1b079f27-0b81-4cb4-bc58-886d76bc2cd9:
-    id: node_type
+    id: 'entity_bundle:node'
     negate: false
     uuid: 1b079f27-0b81-4cb4-bc58-886d76bc2cd9
     context_mapping:
