--- a/composer.json
+++ b/composer.json
@@ -379,7 +379,8 @@
                 "https://www.drupal.org/project/drupal/issues/3296485": "https://www.drupal.org/files/issues/2022-07-18/ASGS-4866-php8-compatibility_3.patch",
                 "https://www.drupal.org/project/drupal/issues/3252288": "https://www.drupal.org/files/issues/2022-05-18/3252288-10.patch",
                 "https://www.drupal.org/project/drupal/issues/3261924": "https://www.drupal.org/files/issues/2023-03-04/drupal-3261924-25.patch",
-                "https://www.drupal.org/project/drupal/issues/3310057": "https://www.drupal.org/files/issues/2022-09-16/mb-strlen-expects-parameter-form-validator-3310057-D8.patch"
+                "https://www.drupal.org/project/drupal/issues/3310057": "https://www.drupal.org/files/issues/2022-09-16/mb-strlen-expects-parameter-form-validator-3310057-D8.patch",
+                "Taxonomy overview memory issue": "https://www.drupal.org/files/issues/2023-06-06/2183565-69.patch"
             },
             "drupal/field_group_settings": {
                 "https://www.drupal.org/project/field_group_settings/issues/3302961": "https://www.drupal.org/files/issues/2022-08-10/3302961_1_button-fix.diff"
