--- a/config/ecom/default/core.entity_view_display.commerce_product_variation.default.wishlist.yml
+++ b/config/ecom/default/core.entity_view_display.commerce_product_variation.default.wishlist.yml
@@ -19,21 +19,32 @@ bundle: default
 mode: wishlist
 content:
   list_price:
-    label: above
     type: commerce_price_default
-    weight: -1
-    region: content
+    label: above
     settings:
       strip_trailing_zeroes: false
       currency_display: symbol
     third_party_settings: {  }
+    weight: -1
+    region: content
   product_id:
     type: entity_reference_label
-    weight: 0
     label: hidden
     settings:
       link: true
     third_party_settings: {  }
+    weight: 0
+    region: content
+  qty_increments:
+    type: number_decimal
+    label: above
+    settings:
+      thousand_separator: ''
+      decimal_separator: .
+      scale: 2
+      prefix_suffix: true
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   add_to_cart_link: true
