APEX-823: Basic theme implementation

--- a/docroot/themes/custom/ecom/ecom.info.yml
+++ b/docroot/themes/custom/ecom/ecom.info.yml
@@ -4,7 +4,7 @@ base theme: classy
 description: A D10 theme for ecom Site.
 package: ATG
 core_version_requirement: ^9 || ^10
-logo: icons/logo.png
+logo: images/logo.png
 screenshot: ecom.png
 
 libraries:
