--- a/docroot/themes/custom/ecom/ecom.libraries.yml
+++ b/docroot/themes/custom/ecom/ecom.libraries.yml
@@ -31,3 +31,40 @@ global:
     - core/drupal
     - core/jquery
     - core/once
+
+slider:
+  css:
+    theme:
+      //cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css: { type: external, minified: true }
+  js:
+    //cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js: { type: external, minified: true }
+    js/slider.js: {}
+
+  dependencies:
+    - core/jquery
+    - core/js-cookie
+
+node--product-category:
+  version: 1.x
+  js:
+    js/full--product-category.js: { }
+
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/once
+
+product-detail:
+  css:
+    theme:
+      //cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css: { type: external, minified: true }
+      //cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css: { type: external, minified: true }
+  js:
+    //cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js: { type: external, minified: true }
+    //cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js: { type: external, minified: true }
+    js/product-detail.js: { }
+
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/once
